--- a/CsvReader.UnitTests/CsvReader.UnitTests.csproj
+++ b/CsvReader.UnitTests/CsvReader.UnitTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CsvReader\CsvReader.csproj" />
+    <ProjectReference Include="../CsvReaderCore/CsvReaderCore.csproj" />
   </ItemGroup>
 
 </Project>
