--- a/Csv.Reader/Csv.Reader.csproj
+++ b/Csv.Reader/Csv.Reader.csproj
@@ -1,4 +1,5 @@
-﻿
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFrameworks>net8.0;net10.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
